microservice-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-external-ingress
  namespace: microservice-demo
spec:
  ingressClassName: nginx
  rules:
  - host: microservice.demo.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-external
            port:
              number: 80
